--- a/Application/eCommerce.Application.csproj
+++ b/Application/eCommerce.Application.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entity\Entity.csproj" />
+    <ProjectReference Include="..\Entity\eCommerce.Entity.csproj" />
   </ItemGroup>
 
 </Project>
