--- a/DataAccess/eCommerce.DataAccess.csproj
+++ b/DataAccess/eCommerce.DataAccess.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entity\Entity.csproj" />
+    <ProjectReference Include="..\Entity\eCommerce.Entity.csproj" />
   </ItemGroup>
 
 </Project>
