--- a/Service/eCommerce.Service.csproj
+++ b/Service/eCommerce.Service.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\Application\eCommerce.Application.csproj" />
+    <ProjectReference Include="..\DataAccess\eCommerce.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
